feat(tensorcpu): vectorize matmul