@@ -7,6 +7,11 @@ dependencies {
     implementation 'org.jocl:jocl:2.0.5'
 }
 
+compileJava {
+    options.compilerArgs.addAll(['--enable-preview'])
+    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
+}
+
 shadowJar {
     archiveFileName = "brain4j-math-${parent.version}.jar"
 }
